examples/errors/duplicates.rcp
enum channel {ch, ch}
enum msgvals {foo}
enum msgvals {bar, baz, bar}
enum myEnum {foo}
message-structure: MSG : msgvals, NO : int, LNK : channel, MSG : int
guard g(x: int, y: int, x: int, bar: int) := true;
property-variables: foo : int
guard g() := true;

agent Agent
    local: counter : int, counter: bool, ch: int
    init: counter == 0

    repeat: (
                label: {counter == 0} ch! true () [counter := 1];
                label: {counter == 1} ch! true () [counter := 0];
                myEnum: {counter == 1} ch! true () [counter := 0]
            )

system = Agent(one, true) || Agent(foo, true) || Agent(one, true)

SPEC F true;
SPEC forall foo : Agent . true;
SPEC forall k : Agent . exists k : Agent . true;

// This example should trigger the following errors:
// Duplicate name 'ch' [Ln 1, Col 17]
// Duplicate name 'msgvals' [Ln 3, Col 6]
// Duplicate name 'bar' [Ln 3, Col 25]
// Duplicate name 'foo' [Ln 4, Col 14]
// Duplicate name 'MSG' [Ln 5, Col 60]
// Duplicate parameter 'x' [Ln 6, Col 25]
// Duplicate parameter 'bar' [Ln 6, Col 33]
// Duplicate name 'foo' [Ln 7, Col 21]
// Duplicate name 'g' [Ln 8, Col 7]
// Duplicate local variable 'counter' [Ln 11, Col 27]
// Duplicate local variable 'ch' [Ln 11, Col 42]
// Duplicate name 'label' [Ln 16, Col 17]
// Duplicate name 'myEnum' [Ln 17, Col 17]
// Duplicate name 'foo' [Ln 20, Col 36]
// Duplicate name 'one' [Ln 20, Col 56]
// Duplicate name 'foo' [Ln 23, Col 13]
// Duplicate name 'k' [Ln 24, Col 32]
